<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rogue Adventure</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="left">←</string>
    <string name="right">→</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="newGame">New Game</string>

</resources>