<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Game" >

    <com.game.rogueadventure.Graphics
        android:id="@+id/graphics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/debugTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:ignore="SelectableText" />

    <Button
        android:id="@+id/zoom_in"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/graphics"
        android:layout_alignLeft="@+id/graphics"
        android:onClick="zoomIn"
        android:text="@string/plus" />

    <Button
        android:id="@+id/zoom_out"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/graphics"
        android:layout_toRightOf="@+id/zoom_in"
        android:onClick="zoomOut"
        android:text="@string/minus" />

    <Button
        android:id="@+id/right"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/down"
        android:layout_alignRight="@+id/graphics"
        android:layout_marginRight="30dp"
        android:onClick="moveRight"
        android:text="@string/right" />

    <Button
        android:id="@+id/down"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/graphics"
        android:layout_toLeftOf="@+id/right"
        android:onClick="moveDown"
        android:text="@string/down" />

    <Button
        android:id="@+id/up"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/right"
        android:layout_toLeftOf="@+id/right"
        android:onClick="moveUp"
        android:text="@string/up" />

    <Button
        android:id="@+id/left"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/down"
        android:layout_toLeftOf="@+id/down"
        android:onClick="moveLeft"
        android:text="@string/left" />

</RelativeLayout>